# AXE-CORE-

./: .gitignore  ARCHITECTURE.md  COST_ANALYSIS.md  README.md  backend_test.py  design_guidelines.md  home_mobile_patch.tsx  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  quick_test.py  replit.md  skills-lock.json
.agents/memory/: MEMORY.md  axe-core-github-repo-layout.md  free-osint-sources.md  git-checkout-divergent-branch-danger.md  google-3d-tiles-caveat.md  porting-existing-app.md  real-terminal-without-pty.md  responsive-tablet-breakpoint.md  runtime-vs-nav-registry-scope.md  same-repo-artifact-api-calls.md  supabase-ddl-access.md
.emergent/: emergent.yml  emergent_todos.json
.github/workflows/: deploy-pages.yml
AXE-CORE-ORCHESTRATOR-content/: plan.md
AXE-CORE-ORCHESTRATOR-content/AXE-CORE-HEADQUARTERS/src-tauri/: Cargo.toml  tauri.conf.json
artifacts/api-server/: package.json
attached_assets/: Pasted--23-Wire-Real-Agentic-Loop-Sync-ZIP-Services-What-Why-T_1784200456586.txt  Pasted-02-02-38-911-Running-build-in-Washington-D-C-USA-East-i_1784278223333.txt  Pasted-15-04-48-940-Running-build-in-Washington-D-C-USA-East-i_1784034464883.txt  Pasted-18-48-39-791-Running-build-in-Washington-D-C-USA-East-i_1784224993763.txt  Pasted-18-51-38-785-Running-build-in-Washington-D-C-USA-East-i_1784309038955.txt  Pasted-19-55-06-061-Running-build-in-Washington-D-C-USA-East-i_1784225015461.txt  Pasted-20-17-08-738-Running-build-in-Washington-D-C-USA-East-i_1784225979117.txt
backend/: poc_axe.py  server.py
frontend/: craco.config.js  package.json  vercel.json
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json
(+649 files in other folders)
