[project]
name = "axe_core___god_mode_ai_system"
version = "0.1.0"
description = "axe_core___god_mode_ai_system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "browserbase",
    "contextual-client",
    "crewai[file-processing,litellm,tools]>=1.15.2,<2.0.0",
    "e2b",
    "e2b-code-interpreter",
    "exa-py",
    "hyperbrowser",
    "patronus",
    "qdrant-client",
    "scrapegraph-py",
    "serpapi",
    "stagehand<=0.5.9",
]

[project.scripts]
axe_core___god_mode_ai_system = "axe_core___god_mode_ai_system.main:run"
run_crew = "axe_core___god_mode_ai_system.main:run"
train = "axe_core___god_mode_ai_system.main:train"
replay = "axe_core___god_mode_ai_system.main:replay"
test = "axe_core___god_mode_ai_system.main:test"
run_with_trigger = "axe_core___god_mode_ai_system.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
